# ai_research_assistant

./: .gitignore  CLAUDE.md  nx.json  package-lock.json  package.json
apps/api/: project.json
apps/api-py/: README.md  SMOKE_TESTS.md  project.json  pyproject.toml  quick_test.py  run_smoke_tests.sh  smoke_test.py
apps/api-py/models/hybrid_apple_model/: README.md
apps/api-py/models/hybrid_apple_model/checkpoint-100/: trainer_state.json
apps/api-py/models/hybrid_apple_model/checkpoint-75/: adapter_config.json  scheduler.pt  trainer_state.json
apps/api-py/src/: __init__.py  main.py  main.py.backup
apps/api-py/src/adapters/: __init__.py  fastspeech2.py  hifigan.py
apps/api-py/src/components/: __init__.py
apps/api-py/src/controllers/: __init__.py  ai_controller.py  asr_controller.py  health_controller.py  tts_controller.py  voice_controller.py
apps/api-py/src/engines/: coqui.py  neural.py
apps/api-py/src/postfx/: loudness.py
apps/api-py/src/services/: asr_service.py  langgraph_service.py  llm_service.py  tts_service.py
apps/api-py/tests/: __init__.py  test_main.py
apps/ui/: project.json
apps/ui-e2e/: project.json
apps/ui/src/: styles.css
apps/ui/src/app/: app.module.css  app.tsx
apps/ui/src/app/components/: VoiceChatbot.css  VoiceChatbot.tsx
